--- a/service-others/src/main/resources/application.yml
+++ b/service-others/src/main/resources/application.yml
@@ -11,8 +11,8 @@ spring:
 #    url: jdbc:mariadb://localhost:8080/pet_cast
     driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
     url: jdbc:log4jdbc:mariadb://localhost:3306/pet_cast
-    username: test
-    password: test
+    username: swcamp
+    password: swcamp
 
   jpa:
     generate-ddl: false
